--- a/app/src/main/res/layout/activity_update_company.xml
+++ b/app/src/main/res/layout/activity_update_company.xml
@@ -68,7 +68,7 @@
         </LinearLayout>
 
 
-        <EditText
+        <TextView
             android:id="@+id/updateCompany_etName"
             android:layout_width="350dp"
             android:layout_height="55dp"
