--- a/app/src/main/res/layout/activity_customer.xml
+++ b/app/src/main/res/layout/activity_customer.xml
@@ -97,24 +97,31 @@
 
             <EditText
                 android:id="@+id/customer_etMaxPrice"
-                android:layout_width="199dp"
+                android:layout_width="227dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Maximum Price"
                 android:inputType="numberDecimal" />
 
-            <Button
+            <Space
+                android:layout_width="58dp"
+                android:layout_height="58dp"
+                android:layout_weight="1" />
+
+            <ImageButton
                 android:id="@+id/customer_btnSearch"
-                android:layout_width="178dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:backgroundTint="#A39305"
                 android:text="Search"
-                android:textSize="20sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"></LinearLayout>
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/cpnByCategory_sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/cpnByCategory_sp"
+                app:layout_constraintTop_toTopOf="@+id/cpnByCategory_sp"
+                app:srcCompat="@android:drawable/ic_menu_search" />
 
         </LinearLayout>
 
